<resources>
    <string name="app_name">RTTApp</string>
    <string name="action_settings">Settings</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="edit_server">SIP server</string>
    <string name="button_set">Set</string>
    <string name="title_activity_first">RTTApp</string>
    <string name="title_activity_display_message">RTTApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_registrar">Registrar/server address</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="pref_use_realtime">Send text in real time?</string>
    <string name="pref_username_qualified">com.laserscorpion.rttapp.pref_username</string>
    <string name="pref_registrar_qualified">com.laserscorpion.rttapp.pref_registrar</string>
    <string name="pref_password_qualified">com.laserscorpion.rttapp.pref_password</string>
    <string name="pref_use_realtime_qualified">com.laserscorpion.rttapp.pref_use_realtime</string>
    <string name="title_activity_rttcall">RTTCallActivity</string>
    <string name="title_activity_rttregistration">RTTRegistrationActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="error_dialog_arg">Message</string>

</resources>
