<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_registrar_qualified"
        android:title="@string/pref_registrar" />
    <EditTextPreference
        android:key="@string/pref_username_qualified"
        android:title="@string/pref_username" />
    <EditTextPreference
        android:key="@string/pref_password_qualified"
        android:title="@string/pref_password" />
    <SwitchPreference
        android:key="@string/pref_use_realtime_qualified"
        android:title="@string/pref_use_realtime"
        android:summaryOn="Send characters as they are entered"
        android:summaryOff="Send text only after hitting the 'Send' button"
        android:defaultValue="true"/>

</PreferenceScreen>
